--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -698,7 +697,7 @@ https://templatemo.com/tm-570-chain-app-dev
         </div>
         <div class="col-lg-3">
           <div class="footer-widget">
-            <h4>About Our Company</h4>
+            <h4>Quem Somos</h4>
             <div class="logo">
               <img src="assets/images/logo_branco.png" alt="">
             </div>
